--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Bosnia 4EVER",
   "main": "bot.js",
+  "scripts":{
+    "start": "node bot.js"
+  },
   "author": "youmanyousef",
   "dependencies": {
     "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
