--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "Hamdija",
+  "name": "package",
   "version": "1.0.0",
-  "description": "Bosnia 4EVER",
+  "description": "I'm a text tutorial bot!",
   "main": "bot.js",
-  "scripts":{
-    "start": "node bot.js"
-  },
-  "author": "youmanyousef",
   "dependencies": {
-    "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
-    "winston": "^3.1.0"
-  }
+    "discord.io": "^2.5.3",
+    "winston": "^2.4.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Brian (ShoarmaKarma)",
+  "license": "ISC"
 }
