--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "bot.js",
   "author": "youmanyousef",
   "dependencies": {
-    "discord.js": "^11.1.0",
+    "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
+    "discord.js": "^11.4.2",
+    "discord.js-commando": "^0.10.0",
+    "winston": "^2.4.4"
   }
 }
